# Trendtracker

.devcontainer/: devcontainer.json
initial_version/: README.md  app.py  pyproject.toml
initial_version/components/: result_section.py  search_form.py  sidebar.py
initial_version/config/: settings.py
initial_version/data/: search_history.csv
initial_version/domain/: news_article.py  search_result.py
initial_version/prompts/: phase_1.md  phase_3.md
initial_version/services/: ai_service.py  search_service.py
initial_version/utils/: error_handler.py  input_handler.py
python_tutorial/: Practice1_Basic_Syntax.ipynb  Practice2_Control_Flow.ipynb  Practice3_Data_Structures.ipynb  Practice4_Functions_and_Modules.ipynb  Step1_Basic_Syntax.ipynb  Step1_Basic_Syntax.md  Step2_Control_Flow.ipynb  Step2_Control_Flow.md  Step3_Data_Structures.ipynb  Step3_Data_Structures.md  Step4_Functions_and_Modules.ipynb  Step4_Functions_and_Modules.md  note.ipynb  pyproject.toml
use_google_api_key/: .env.example  main.py  notebook.ipynb  prompt.md  pyproject.toml
uv_python_dotenv/: main.py  pyproject.toml
version_2/: .env.example  app.py
version_2/components/: loading.py  result_section.py  search_form.py  sidebar.py
version_2/data/: search_history.csv
version_2/domain/: news_article.py  search_result.py
version_2/prompts/: development_roadmap.md  phase_2.md  phase_4.md  phase_5.md  phase_6.md  phase_7.md
version_2/repositories/: search_repository.py
version_2/services/: ai_service.py  search_service.py
version_2/utils/: exceptions.py  key_generator.py
